[project]
name = "dotnet-todo-mcp"
version = "0.1.2"
description = "A todo MCP server built with FastMCP"
readme = "README.md"
license = "MIT"
keywords = ["mcp", "todo", "productivity", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
]

[project.scripts]
todo-mcp = "server:main"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
